# YOLO-POC

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
data/fpv/: data.yaml
scripts/: validate_dataset.py
src/fpv_vision/: __init__.py  cli.py
src/fpv_vision/config/: __init__.py  settings.py
src/fpv_vision/data/: __init__.py  validator.py  visualizer.py
src/fpv_vision/inference/: __init__.py  detector.py
src/fpv_vision/training/: __init__.py  trainer.py
src/fpv_vision/utils/: __init__.py  device.py  logging.py
src/fpv_vision/visualization/: __init__.py  annotator.py
tests/: test_device.py  test_settings.py  test_version.py
